# bswap-cli

./: .gitignore  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  bswap.c
